# kdg-2425

big-data-2/: .gitignore  06_0_EXAMPLE_KafkaProducer.py  06_1_EXAMPLE_kafkaConsumer.ipynb  ConnectionConfig.py  application.yml  compose.yml  config.ini  pyproject.toml
data-science-2/: DS2-DAI3 - 01 - Python basics.ipynb  pyproject.toml
data-science-2/numpy/: 02.00-Introduction-to-NumPy.ipynb  02.01-EX (solutions).ipynb  02.01-EX.ipynb  02.01-Understanding-Data-Types.ipynb  02.02-EX (solutions).ipynb  02.02-EX.ipynb  02.02-The-Basics-Of-NumPy-Arrays.ipynb  02.03-Computation-on-arrays-ufuncs.ipynb  02.03_EX (solutions).ipynb  02.03_EX.ipynb  02.04-Computation-on-arrays-aggregates.ipynb  02.04_EX (solutions).ipynb  02.04_EX.ipynb  02.05-Computation-on-arrays-broadcasting.ipynb  02.05_EX (solutions).ipynb  02.05_EX.ipynb  02.06-Boolean-Arrays-and-Masks.ipynb  02.06_EX (solutions).ipynb  02.06_EX.ipynb  02.07-Fancy-Indexing.ipynb  02.07_EX (solutions).ipynb  02.07_EX.ipynb
data-science-2/pandas/: 03.00-Introduction-to-Pandas.ipynb  03.01-Introducing-Pandas-Objects.ipynb  03.01_EX (solutions).ipynb  03.01_EX.ipynb  03.02-Data-Indexing-and-Selection.ipynb  03.02_EX (solutions).ipynb  03.02_EX.ipynb  03.02bis.XTR_ReadingFiles (solutions).ipynb  03.02bis.XTR_ReadingFiles.ipynb  03.03-Operations-in-Pandas.ipynb  03.03_EX (solutions).ipynb  03.03_EX.ipynb  03.04-EX (solutions).ipynb  03.04-EX.ipynb  03.04-Missing-Values.ipynb  03.07-EX (solutions).ipynb  03.07-EX.ipynb  03.08_EX (solutions).ipynb  03.08_EX.ipynb  03.10-Working-With-Strings.ipynb  03.10_EX (solutions).ipynb  (+1 more)
