[project]
name = "big-data-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "delta-spark==3.2.0",
    "ipykernel>=6.29.5",
    "kafka-python>=2.0.2",
    "numpy>=2.0.2",
    "pandas>=2.2.2",
    "pyspark>=3.5.2",
]
