[project]
name = "data-science-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter==1.0.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "scikit-learn==1.5.1",
    "tensorflow==2.17"
]
